--- a/Homework_L1/Ex_4/index.html
+++ b/Homework_L1/Ex_4/index.html
@@ -23,8 +23,10 @@
             <input id="userinput" type="text" placeholder="Add to do" class="form-control">
             <button id="enter" class="btn btn-primary ml-2">Add</button>
         </div>
+
+        <div>Click list when you done</div>
          
-          <ul>
+          <ul class="mt-2">
               <li>Swim<button class="delete btn btn-danger">Delete</button></li>
               <li>Go gym<button class="delete btn btn-danger ">Delete</button></li> 
               <li>Happy birthday<button class="delete btn btn-danger ">Delete</button></li>
