--- a/Homework_L1/Ex_4/index.html
+++ b/Homework_L1/Ex_4/index.html
@@ -24,7 +24,7 @@
             <button id="enter" class="btn btn-primary ml-2">Add</button>
         </div>
 
-        <div>Click list when you done</div>
+        <div>Click to do when you're done</div>
          
           <ul class="mt-2">
               <li>Swim<button class="delete btn btn-danger">Delete</button></li>
